@@ -1,30 +1,15 @@
 plugins {
+    id("java-gi.library-conventions")
     application
-    `java-library`
 }
 
 application {
     mainClass.set("io.github.jwharm.javagi.example.HelloWorld")
 }
 
-java {
-    // Temporarily needed until gradle 7.6 is out
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(19))
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    implementation("io.github.jwharm.javagi:gtk4:1.0")
+    implementation(project(":gtk4"))
 }
-
-group = "io.github.jwharm.javagi"
-version = "1.0"
 
 // Temporarily needed until panama is out of preview
-tasks.compileJava.get().options.compilerArgs.add("--enable-preview")
 tasks.run.get().jvmArgs!!.add("--enable-preview")
